# dygraphs

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  mkdocs.yml  pyproject.toml  versions.json
.github/workflows/: docs.yml  lint.yml  publish.yml  test.yml
0.0.10/: objects.inv  sitemap.xml
0.0.10/api/: index.html
0.0.9/: index.html
0.0.9/api/: index.html
0.0.9/search/: search_index.json
docs/: api.md  gallery_conf.py  index.md
docs/examples/: README.md  plot_01_basic_line.py  plot_02_styling.py  plot_03_error_bands.py  plot_04_overlays.py  plot_05_dash_data_update.py
dygraphs-js/auto_tests/: runner.html
dygraphs-js/docs/: ssi.py  ssi_expander.py  ssi_server.py
dygraphs-js/scripts/: generate-documentation.py  generate-download.py  smap-in.py  smap-out.py
examples/: callback_outputs_demo.py  capture_demo.py  capture_overlays_demo.py  capture_target_size_demo.py  dash_data_update.py  empty_placeholder_demo.py  full_demo.py  gallery.py  shiny_demo.py
examples/gallery_pkg/: __init__.py  _common.py  api.py  basics.py  overlays.py  plotters.py  plugins.py
latest/: 404.html  index.html
latest/api/: index.html
main/: 404.html  sitemap.xml
main/api/: index.html
main/search/: search_index.json
src/dash_dygraphs/: __init__.py  capture.py  dash_component.py  dygraph.py  utils.py
src/dygraphs/: __init__.py  declarative.py  dygraph.py  utils.py
src/dygraphs/assets/: dash_render.js  render_core.js
src/dygraphs/assets/plotters/: barseries.js  candlestickgroup.js  errorplotter.js  fillplotter.js  multicolumngroup.js  stackedbarchart.js  stackedribbongroup.js
src/dygraphs/dash/: __init__.py  capture.py  component.py  modebar.py  outputs.py
src/dygraphs/shiny/: __init__.py  component.py
src/pydygraphs/: __init__.py  declarative.py  dygraph.py  utils.py
src/pydygraphs/assets/plotters/: errorline.js  filledline.js  stackedbargroup.js  stackedlinegroup.js  stemplot.js
src/pydygraphs/dash/: __init__.py  capture.py  component.py
src/pydygraphs/shiny/: __init__.py  component.py
tests/dash/: test_dash_component.py  test_gap_options.py  test_outputs.py  test_render_js_correctness.py
tests/dash_dygraphs/: test_axis.py  test_dash_component.py  test_dygraph.py  test_gap_options.py  test_highlight.py  test_interaction.py  test_legend.py  test_options.py  test_overlays.py  test_plotters.py  test_plugins.py  test_series.py  test_smoke.py  test_utils.py
tests/dygraphs/: test_axis.py  test_coverage_gaps.py  test_declarative.py  test_dygraph.py  test_highlight.py  test_interaction.py  test_js_validation.py  test_legend.py  test_new_features.py  test_options.py  test_overlays.py  test_phase3_features.py  test_plotters.py  test_plugins.py  test_series.py  test_shiny_adapter.py  test_smoke.py  test_timezone.py  test_utils.py
tests/integration/: test_browser_render.py  test_capture_strategy.py  test_cdn_parity.py  test_chrome_smoke.py  test_dash_update.py  test_dygraph_render.py  test_js_asset_parity.py  test_js_behavior.py  test_r_parity.py  test_render_all_features.py  test_sync_and_bar.py
tests/pydygraphs/: test_axis.py  test_declarative.py  test_dygraph.py  test_highlight.py  test_interaction.py  test_legend.py  test_new_features.py  test_options.py  test_overlays.py  test_plotters.py  test_plugins.py  test_series.py  test_shiny_adapter.py  test_smoke.py  test_utils.py
