[project]
name = "dygraphs"
dynamic = ["version"]
description = "Python wrapper for the dygraphs JavaScript charting library. Core port of R dygraphs with framework adapters for Dash and Shiny."
keywords = ["dygraphs", "visualization", "time-series", "dash", "shiny", "charting"]
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent",
]
readme = "README.md"
license = "MIT"
authors = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
maintainers = [
    { name = "Simon Niederberger", email = "s.niederberger@hotmail.com" },
]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
pandas = ["pandas>=1.5.0"]
# dash 2.9.0 is the minimum that ships allow_duplicate=True on Output
# objects and the 'initial_duplicate' value for prevent_initial_call —
# both are required by the clientside callback wiring in
# src/dygraphs/dash/component.py.
# dash-capture>=0.0.11 is required for `multi_canvas_strategy`,
# `MULTI_CANVAS_CAPTURE_JS`, and `build_reflow_preprocess`, which
# `dygraphs.dash.capture` consumes directly. Earlier versions don't
# ship these public APIs.
dash = ["dash>=2.9.0", "dash-wrap>=0.0.1", "dash-capture>=0.0.11"]
shiny = ["shiny>=0.6.0"]
all = [
    "pandas>=1.5.0",
    "dash>=2.9.0",
    "dash-wrap>=0.0.1",
    "dash-capture>=0.0.11",
    "shiny>=0.6.0",
]

[project.urls]
Homepage = "https://github.com/saemeon/dygraphs"
Repository = "https://github.com/saemeon/dygraphs"

[dependency-groups]
test = ["pytest", "pytest-cov", "selenium", "numpy", "pandas>=1.5.0", "dash>=2.9.0", "pillow"]
doc = ["mkdocs", "mkdocs-material", "mkdocstrings[python]", "mike"]
dev = [
    "ruff",
    "prek",
    "ty",
    { include-group = "test" },
    { include-group = "doc" },
]

[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "no-local-version"
write_to = "src/dygraphs/_version.py"

[tool.setuptools.dynamic]
version = { attr = "dygraphs._version.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
dygraphs = ["py.typed", "assets/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/dygraphs --cov-report=term-missing"

[tool.ty.src]
include = ["src"]

[tool.ty.rules]
unresolved-import = "ignore"

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = ["dygraphs-js", "dygraphs-r", "PyDyGraphs"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM", "PERF"]
ignore = ["E203", "E501"]
